src/objects/Ownership__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyTrigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ownership</relationshipLabel>
        <relationshipName>Ownership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>CompanyTrigger__r.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Ownership__c</fullName>
        <inlineHelpText>What is this owners percentage of ownership?</inlineHelpText>
        <label>Percentage Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_SF__c</fullName>
        <formula>Property__r.Square_Footage__c</formula>
        <label>Property SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Property__r.State__c )</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Property__r.Year_Built__c</formula>
        <label>Year Built</label>
        <type>Text</type>
    </fields>
    <label>Ownership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ownership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>